--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-﻿Flask==2.2.5
-tensorflow==2.13.0
+Flask==3.1.1
+tensorflow==2.19.0
 scikit-learn==1.7.0
-numpy
-gunicorn
+numpy==2.1.3
+gunicorn==23.0.0
+keras==3.10.0
